--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "react": "^17.0.2",
-    
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -22,6 +21,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
